--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,52 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+#vim
+*.swp
+
+#eclipse
+.classpath
+.project
+.settings/
+
+#intellij
+.idea
+.idea/
+*.iml
+*.iws
+
+#Mac
+.DS_Store
+
+#Maven
+log/
+logs/
+*.class
+target/
+
+### Gradle ###
+.gradle
+.gradle/
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
+
+# 任意日志输出
+out/
+
+.jpb/
